--- a/Part0/0.4.md
+++ b/Part0/0.4.md
@@ -1,3 +1,5 @@
+```mermaid
+
 sequenceDiagram
     participant Browser
     participant Server
@@ -12,3 +14,4 @@ sequenceDiagram
     Note right of Browser: JS file executes function to fetch data
     Server-->>-Browser:  [... ,{content: "hey", date:"2024-07-09"}]
     Note right of Browser: JS executes function to display data with new data appended
+```
