--- a/Part0/0.4.md
+++ b/Part0/0.4.md
@@ -1,15 +1,19 @@
 ```mermaid
 
 sequenceDiagram
+    sequenceDiagram
     participant Browser
     participant Server
 
     Browser->>+Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note <br/> Payload {note: Hey}
     Server-->>Browser: redirect to https://studies.cs.helsinki.fi/exampleapp/notes
-    Server-->>Browser: HTML File
-    Server-->>Browser: CSS File
-    Server-->>-Browser: JS File
     Note right of Browser:  Server accepts payload and adds it to array then redirect to /notes
+    Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    Server-->>-Browser: HTML File
+    Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    Server-->>-Browser: CSS File
+    Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    Server-->>-Browser: JS File
     Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     Note right of Browser: JS file executes function to fetch data
     Server-->>-Browser:  [... ,{content: "hey", date:"2024-07-09"}]
