--- a/Part0/0.5.md
+++ b/Part0/0.5.md
@@ -12,5 +12,5 @@
         Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
         Note right of Browser: JS file executes function to fetch data
         Server-->>-Browser:  [... ,{content: "hey", date:"2024-07-09"}]
-        Note right of Browser: JS executes function to display data
+        Note right of Browser: JS adds the content to an array then calls the function to display array
 ```
