--- a/Part0/0.4.md
+++ b/Part0/0.4.md
@@ -6,7 +6,7 @@ sequenceDiagram
 
     Browser->>+Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note <br/> Payload {note: Hey}
     Server-->>Browser: redirect to https://studies.cs.helsinki.fi/exampleapp/notes
-    Note right of Browser:  Server accepts payload and adds it to array then redirect to /notes
+    Note right of Browser:  Server accepts payload and adds it to database then redirect to /notes
     Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     Server-->>-Browser: HTML File
     Browser->>+Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
